# SimpleDB-Engine

./: .gitignore  CMakeLists.txt  README.md  simpledb
.github/workflows/: ci.yml
data/: catalog.txt  users.rows
include/: bplustree.h  database.h  sql.h  types.h
src/: bplustree.cpp  database.cpp  main.cpp  sql.cpp
tests/: regression.cpp
